Image Picker for D7 in 7.x-1.x, 20011-07-21
------------------------------------
by hutch, changed function names containing '_process'

Image Picker for D7 in 7.x-1.x, 20011-07-06
------------------------------------
by hutch, fixed imagepicker_get_image_path bug

Image Picker for D7 in 7.x-1.x, 20011-06-24
------------------------------------
by hutch, fixed quota bug, #1198990

Image Picker for D7 in 7.x-1.x, 20011-06-22
------------------------------------
by hutch, added admin theme option

Image Picker for D7 in 7.x-1.x, 20011-06-17
------------------------------------
by hutch, added defaults for image styles

Image Picker for D7 in 7.x-1.x, 20011-06-13
------------------------------------
by hutch, added jpeg quality to upload form

Image Picker for D7 in 7.x-1.x, 20011-06-12
------------------------------------
by hutch, fixed jpeg quality bug, #1036216

Image Picker for D7 in 7.x-1.x, 20011-06-11
------------------------------------
by hutch, fixed currentgroup bug, #1185406

Image Picker for D7 in 7.x-1.x, 20011-06-08
------------------------------------
by hutch, added rel for colorbox support

Image Picker for D7 in 7.x-1.x, 20011-06-06
------------------------------------
by hutch, added image styles support

Image Picker for D7 in 7.x-1.x, 20011-06-03
------------------------------------
by hutch, added reallocate feature

Image Picker for D7 in 7.x-1.x, 20011-04-22
------------------------------------
by hutch, added insert template

Image Picker for D7 in 7.x-1.x, 20011-04-20
------------------------------------
by hutch, fixed bug in imagepicker_file_unmanaged_copy, #1111184

Image Picker for D7 in 7.x-1.x, 20011-04-02
------------------------------------
by hutch, fixed doubleslash bug, #1111184

Image Picker for D7 in 7.x-1.x, 20011-03-31
------------------------------------
by hutch, cleanup for new release

Image Picker for D7 in 7.x-1.x, 20011-03-20
------------------------------------
by hutch, fixed bug in gallery block paths