@@ -166,3 +166,7 @@
 
 #imgp_relbox_link_control {
 }
+
+#imgp_insert_image_title {
+    clear: both;
+}
